--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -4,11 +4,10 @@
     android:layout_height="match_parent"
     tools:context="com.zfscgy.zfchat.zfchat.FragmentChat">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/textView4"
+    <ListView
+        android:id="@+id/listView_chats"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Chat" />
+        android:layout_marginBottom="40dp" />
 
 </FrameLayout>
