--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -7,7 +7,7 @@
 
     <item
         android:id="@+id/navigation_contactor"
-        android:title="@string/title_contactors" />
+        android:title="@string/title_contacters" />
 
     <item
         android:id="@+id/navigation_find"
